---------------------------------------------------------------------

3.15 (10 Jul 2001)

     - Documented the allocator template parameter.
     - Improved the pointer update when copying HalfedgeDS_vector.
     - Changed pointer update in HalfedgeDS_list from std::map to
       CGAL::Unique_hash_map improving speed.
     - Proof read and formatted the documentation. 

3.14 (05 Jul 2001)

     - Fixed bug with 'typename A::template B<..>' syntax.

3.13 (02 Jul 2001)

     - Added release note about old/new design to documentation.
     - Documentation ispelled.
     - Added allocators to HalfedgeDS.

3.12 (29 Jun 2001)

     - Changed \ccIdfierPage back to \ccRefIdfierPage.

3.11 (29 Jun 2001)

     - Smaller corrections in the doc.
     - Added pathname to example program header line.
     - Replaced __GNUC__ excpetions with new workaround flag
       CGAL_CFG_NO_NESTED_TEMPLATE_KEYWORD.
     - Static method halfedge_handle() in HalfedgeDS_vector changed.
     - Fixed missing halfedge_handle() call in hds_prog_compact.C to
       make it work with g++ 3.0.

3.10 (25 Jun 2001)

     - Fixed missing Plane dummy types in face_base classes.
     - Remove the HalfedgeDS_using_list
     - Rename HalfedgeDS_using_in_place_list to HalfedgeDS_list
     - Rename HalfedgeDS_using_vector to HalfedgeDS_vector.
     - Fixed 'emplate' typo that shows with MSVC only.

3.9 (21 Jun 2001)

     - Attempt to fix bug in hds_prog_compact.C. 
     - New naming scheme for concepts.
     - New kernel traits introduced.
     - Changed name of HalfedgeDS_items.h to HalfedgeDS_items_2.h.
     - Revised example files and doc.

3.8 (19 Jun 2001)

     - Changes in the doc.

3.7 (18 Jun 2001)

     - Fixed example code inclusion in the doc.
     - Fixed compilation bugs with Base_base types in halfedge bases.

3.6 (17 Jun 2001)

     - changed erase_all() to clear() for HalfedgeDS concept.

3.5 (15 Jun 2001)

     - hanged filename to avoid upper/lower-case conflict of 